--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
-  "version": "1.19.3-preview.2",
+  "version": "1.19.3",
   "main": "main.js",
   "macVirtualCamUrl": "https://obs-studio-deployment.s3.us-west-2.amazonaws.com/slobs-vcam-installer-1.0.14-release-osx-[ARCH].tar.gz",
   "scripts": {
