some refactoring, mutex fun, and misc race/deadlock tweaks

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "package:preview": "yarn generate-agreement && rimraf dist && electron-builder build -w --x64 --config electron-builder/preview.config.js",
     "package:beta": "cross-env SLD_COMPILE_FOR_BETA=1 yarn compile && yarn generate-agreement && rimraf dist && electron-builder build -w --x64 --config electron-builder/beta.config.js",
     "package:highlighter": "cross-env HIGHLIGHTER_ENV=staging yarn compile && cross-env SLOBS_NO_SIGN=true yarn package",
+    "package:nosign": "yarn compile && cross-env SLOBS_NO_SIGN=true yarn package",
     "eslint": "eslint \"{app,guest-api,obs-api,updater}/**/*.ts\" main.js",
     "test": "tsc -p test && ava -v --timeout=3m ./test-dist/test/regular/**/*.js",
     "test:file": "tsc -p test && ava -v --timeout=60m",
@@ -74,6 +75,7 @@
     "@inworld/nodejs-sdk": "1.16.1-beta.0",
     "abort-controller": "^3.0.0",
     "archiver": "2.1.1",
+    "async-mutex": "^0.5.0",
     "aws-sdk": "^2.814.0",
     "color-picker": "https://obs-studio-deployment.s3-us-west-2.amazonaws.com/color-picker-0.0.0.tar.gz",
     "crash-handler": "https://slobs-crash-handler.s3-us-west-2.amazonaws.com/crash-handler-0.0.0.tar.gz",
