--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "@inworld/nodejs-sdk": "1.16.1-beta.0",
     "abort-controller": "^3.0.0",
     "archiver": "2.1.1",
-    "async-mutex": "^0.5.0",
     "aws-sdk": "^2.814.0",
     "color-picker": "https://obs-studio-deployment.s3-us-west-2.amazonaws.com/color-picker-0.0.0.tar.gz",
     "crash-handler": "https://slobs-crash-handler.s3-us-west-2.amazonaws.com/crash-handler-0.0.0.tar.gz",
@@ -94,6 +93,7 @@
     "obs-studio-node": "https://s3-us-west-2.amazonaws.com/obsstudionodes3.streamlabs.com/osn-0.0.0-release.tar.gz",
     "openai": "^4.80.1",
     "overlayscrollbars-react": "^0.2.2",
+    "p-memoize": "^8.0.0",
     "raven": "^2.6.4",
     "react-colorful": "^5.5.0",
     "react-devtools-electron": "^4.7.0",
