--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,13 @@ jobs:
       - script: yarn install --immutable 2>&1
         displayName: 'Install Dependencies'
 
+      - powershell: |
+          $url = "https://aka.ms/vs/17/release/vc_redist.x64.exe"
+          $output = "$env:TEMP\vc_redist.x64.exe"
+          Invoke-WebRequest -Uri $url -OutFile $output
+          Start-Process -FilePath $output -ArgumentList "/install", "/quiet", "/norestart" -Wait
+        displayName: 'Install Visual Studio Redistributable DLLs'
+
       - script: node node_modules/electron/install.js
         displayName: 'Install Electron'
 
