Revert "Update eslint, prettier, and related packages."
This reverts commit e8354c28c779ca04794df641657ed0bb966804c2.

--- a/package.json
+++ b/package.json
@@ -164,11 +164,10 @@
     "electron-builder": "22.14.5",
     "electron-chromedriver": "29.3.3",
     "electron-devtools-installer": "3.1.1",
-    "eslint": "^9.26.0",
+    "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.1.0",
-    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-vue": "6.1.2",
     "execa": "5.0.0",
@@ -190,7 +189,7 @@
     "p-memoize": "^8.0.0",
     "pixelmatch": "4.0.2",
     "pngjs": "3.3.3",
-    "prettier": "^3.5.3",
+    "prettier": "2.2.1",
     "prettier-eslint": "12.0.0",
     "pretty-bytes": "5.6.0",
     "progress": "2.0.0",
