first take at switching vision to the SDK

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,7 @@ runtime=electron
 target=2.0.14
 disturl=https://atom.io/download/electron
 build_from_source=true
+
+@streamlabs-core:registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+always-auth=true
