--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,11 @@ plugins:
     spec: "https://raw.githubusercontent.com/mhassan1/yarn-plugin-licenses/v0.7.1/bundles/@yarnpkg/plugin-licenses.js"
 
 yarnPath: .yarn/releases/yarn-3.1.1.cjs
+
+npmRegistryServer: "https://registry.npmjs.org"
+
+npmScopes:
+  streamlabs-core:
+    npmRegistryServer: "https://registry.npmjs.org"
+    npmAuthToken: ${NPM_TOKEN}
+    npmAlwaysAuth: true
